# oxideav-core

./: CHANGELOG.md  Cargo.toml  README.md  release-plz.toml
.github/workflows/: ci.yml
benches/: primitives.rs
docs/: config-changed.md
src/: arena.rs  bits.rs  capabilities.rs  engine.rs  error.rs  execution.rs  filter.rs  format.rs  frame.rs  lib.rs  limits.rs  metadata.rs  options.rs  packet.rs  picture.rs  rational.rs  stream.rs  subtitle.rs  time.rs  vector.rs
src/arena/: mod.rs  sync.rs
src/registry/: codec.rs  container.rs  context.rs  filter.rs  mod.rs  slice.rs  source.rs
tests/: props.rs
