[package]
name = "oxideav-core"
version = "0.1.3"
edition = "2021"
rust-version = "1.80"
license = "MIT"
authors = ["Mark Karpeles"]
description = "Core types for oxideav — timestamps, packets, frames, media formats (pure Rust, no C deps)"
repository = "https://github.com/OxideAV/oxideav-core"
homepage = "https://github.com/OxideAV/oxideav-core"
readme = "README.md"
keywords = ["multimedia", "audio", "video", "codec", "pure-rust"]
categories = ["multimedia", "encoding"]

[features]
default = []
# Enables `CodecOptions::from_json` / `parse_options_json` for consumers
# that carry codec tuning as JSON (e.g. oxideav-pipeline). Adds a
# `serde_json` dependency; default off to keep the core dep-light.
json-options = ["dep:serde_json"]

[dependencies]
thiserror = "2"
serde_json = { version = "1", optional = true }
